--- a/src/_includes/sections/offer/index.njk
+++ b/src/_includes/sections/offer/index.njk
@@ -1,4 +1,4 @@
-<section id="offer" aria-label="Oferta e Preço" class="relative py-24 md:py-32 overflow-hidden" data-reveal data-analytics-section="offer">
+<section id="s-offer" aria-label="Oferta e Preço" class="relative py-24 md:py-32 overflow-hidden" data-reveal data-analytics-section="offer">
   
   {# Premium Background Layer - Optimized #}
   <div class="absolute inset-0 before:content-[''] before:absolute before:inset-0 before:bg-gradient-to-br before:from-neutral-50 before:via-white before:to-neutral-100 after:content-[''] after:absolute after:inset-0 after:[background:radial-gradient(16rem_16rem_at_80%_12%,theme(colors.burgundy.100/.2),transparent_60%),radial-gradient(12rem_12rem_at_15%_85%,theme(colors.navy.100/.15),transparent_60%)]" data-analytics-section="offer"></div>
